SpotsDialog add background color

--- a/myUtils/src/main/res/values/themes.xml
+++ b/myUtils/src/main/res/values/themes.xml
@@ -6,4 +6,7 @@
     </style>
 
     <style name="Theme.MyUtils" parent="Base.Theme.MyUtils" />
+
+<!--    <style name="SpotsDialogDefault" parent="android:Theme.DeviceDefault.Light.Dialog"/>-->
+    <style name="SpotsDialogDefault" parent="Theme.Material3.Dark.Dialog"/>
 </resources>
