--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:gravity="center">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/llMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
